--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
   box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.25);
   background: #323648;
   color: #f0ffff;
-  animation: moveInFromTop 1.2s ease-in;
+  animation: fadein 2s ease-in-out;
 }
 
 .card__items {
@@ -90,7 +90,7 @@ body {
   width: 35%;
   margin: 0 auto;
   border-radius: 50%;
-  box-shadow: 0 0 0 1.6rem #464c68;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.25), 0 0 0 1.6rem #464c68;
 }
 
 .card-media__caption {
@@ -101,17 +101,15 @@ body {
   color: #f0ffff;
 }
 
-@keyframes moveInFromTop {
+@keyframes fadein {
+  80% {
+    opacity: 0;
+    transform: translateY(-4rem);
+  }
   0% {
     opacity: 0;
-    transform: translateY(-1.2rem);
-  }
-  80% {
-    opacity: 0.5;
-    transform: translateY(0.8rem);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
   }
 }
