--- a/scss/base/_typorgaphy.scss
+++ b/scss/base/_typorgaphy.scss
@@ -6,4 +6,10 @@
   padding: 3.2rem 4rem;
   font-size: $font-size-xl;
   font-weight: 300;
+
+  @include media(phone) {
+    margin-bottom: 0.8rem;
+    padding: 1.2rem 2rem;
+    font-size: 3.4rem;
+  }
 }
