--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-/*======================
-as media-quires are not based on root element, but on browsers' default 16px unit, we need to convert everything to ems (not rems!) in media queries, as rems will not work! Therefore, to get ems as relative units, we devide desired breakpoints in px by 16.
-======================*/
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;700&display=swap");
 * {
   box-sizing: border-box;
@@ -31,11 +28,26 @@ body {
   font-weight: 300;
 }
 
+@media only screen and (max-width: 48em) {
+  .title-alpha {
+    margin-bottom: 0.8rem;
+    padding: 1.2rem 2rem;
+    font-size: 3.4rem;
+  }
+}
+
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   grid-gap: 2rem;
   font-weight: 300;
+}
+
+@media only screen and (max-width: 48em) {
+  .cards {
+    grid-template-columns: 1fr;
+    grid-gap: 0.8rem;
+  }
 }
 
 .card {
@@ -74,6 +86,12 @@ body {
 
 .card__item > span {
   display: inline-block;
+}
+
+@media only screen and (max-width: 48em) {
+  .card {
+    border-radius: 0;
+  }
 }
 
 .card-media {
