--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;700&display=swap");
 
+/* ========== RESET ========== */
+
 * {
   box-sizing: border-box;
   border: 0;
   margin: 0;
   padding: 0;
 }
+
+/* ========== SET FONT-SIZE for REMS ========== */
 
 html {
   font-family: "Cairo", sans-serif;
