--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
+/* ========== VARIABLES ========== */
+/* ========== MIXINS ========== */
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;700&display=swap");
+/* ========== RESET ========== */
 * {
   box-sizing: border-box;
   border: 0;
@@ -6,6 +9,7 @@
   padding: 0;
 }
 
+/* ========== SET FONT-SIZE for REMS ========== */
 html {
   font-family: "Cairo", sans-serif;
   font-size: 62.5%;
@@ -18,6 +22,7 @@ body {
   width: 100%;
 }
 
+/* ========== TYPOGRAPHY ========== */
 .title-alpha {
   box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.25);
   background: #323648;
@@ -36,6 +41,7 @@ body {
   }
 }
 
+/* ======= cards container ======= */
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -50,6 +56,7 @@ body {
   }
 }
 
+/* ========== each card ========== */
 .card {
   display: flex;
   align-items: inherit;
@@ -94,6 +101,7 @@ body {
   }
 }
 
+/* ===== cards profile image area ===== */
 .card-media {
   display: flex;
   align-items: inherit;
@@ -119,6 +127,7 @@ body {
   color: #f0ffff;
 }
 
+/* ========= cards animation ========= */
 @keyframes fadein {
   80% {
     opacity: 0;
