--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 
 /* ========== TYPOGRAPHY ========== */
 .title-alpha {
-  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.5);
   background: #323648;
   color: #f0ffff;
   margin-bottom: 4rem;
@@ -44,7 +44,7 @@ body {
 /* ======= cards container ======= */
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-gap: 2rem;
   font-weight: 300;
 }
@@ -63,10 +63,23 @@ body {
   flex-direction: column;
   justify-content: stretch;
   border-radius: 0.4rem 0.4rem 0.4rem 0.4rem;
-  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.25);
+  position: relative;
   background: #323648;
   color: #f0ffff;
   animation: fadein 2s ease-in-out;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 350ms ease-in-out;
+}
+
+.card:hover::before, .card:focus::before {
+  opacity: 1;
 }
 
 .card__items {
